Bug 367855 - Konsole crash when using --tabs-from-file with not exisitng file
Summary: Konsole crash when using --tabs-from-file with not exisitng file
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-08-26 13:53 UTC by Guillaume Blanc
Modified: 2016-08-31 12:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guillaume Blanc 2016-08-26 13:53:14 UTC
Application: konsole (15.12.3)

Qt Version: 5.5.1
Operating System: Linux 4.4.0-34-generic x86_64
Distribution: Ubuntu 16.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:

start konsole from command line with --tabs-from-file followed by path of non existing file

Konsole output :

gblanc@GB-PC:~$ konsole --tabs-from-file /tmp/testk
QCoreApplication::arguments: Please instantiate the QApplication object first
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
gblanc@GB-PC:~$ ERROR: Cannot open tabs file  /tmp/testk
No valid lines found in  /tmp/testk
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = konsole path = /usr/bin pid = 29363
KCrash: Arguments: /usr/bin/konsole 
KCrash: Attempting to start /usr/lib/x86_64-linux-gnu/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0

The crash can be reproduced every time.

-- Backtrace:
Application: Konsole (konsole), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f01611b9940 (LWP 29363))]

Thread 3 (Thread 0x7f015eeca700 (LWP 29364)):
#0  0x00007f0172c50e8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f016b744c62 in _xcb_conn_wait () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f016b7468d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f0160bf5629 in QXcbEventReader::run() () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f016f5f384e in QThreadPrivate::start(void*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f016b1196fa in start_thread (arg=0x7f015eeca700) at pthread_create.c:333
#6  0x00007f0172c5cb5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f0154782700 (LWP 29365)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f015c8e3213 in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#2  0x00007f015c8e2937 in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#3  0x00007f016b1196fa in start_thread (arg=0x7f0154782700) at pthread_create.c:333
#4  0x00007f0172c5cb5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f01611b9940 (LWP 29363)):
[KCrash Handler]
#6  0x00007f01728fdbf2 in Konsole::ViewManager::saveSessions(KConfigGroup&) () from /usr/lib/x86_64-linux-gnu/libkonsoleprivate.so.15
#7  0x00007f0171f31a98 in KMainWindow::savePropertiesInternal(KConfig*, int) () from /usr/lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#8  0x00007f0171f31bdf in KMWSessionManager::saveState(QSessionManager&) () from /usr/lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#9  0x00007f0171f6ef1d in KMWSessionManager::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#10 0x00007f016f802fca in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007f016fb0c725 in QGuiApplication::saveStateRequest(QSessionManager&) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#12 0x00007f016fb0e51b in QGuiApplicationPrivate::saveState() () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#13 0x00007f0160c2513d in sm_performSaveYourself(QXcbSessionManager*) () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#14 0x00007f0160c25374 in sm_saveYourselfCallback(_SmcConn*, void*, int, int, int, int) () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#15 0x00007f016d1c2b28 in _SmcProcessMessage (iceConn=0x7edeb0, clientData=0x7de080, opcode=<optimized out>, length=<optimized out>, swap=0, replyWait=<optimized out>, replyReadyRet=0x7ffe0b7dc758) at ../../src/sm_process.c:241
#16 0x00007f016cfb4167 in IceProcessMessages (iceConn=0x7edeb0, replyWait=0x0, replyReadyRet=0x0) at ../../src/process.c:386
#17 0x00007f016f802fca in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#18 0x00007f016f88251e in QSocketNotifier::activated(int, QSocketNotifier::QPrivateSignal) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#19 0x00007f016f80f47b in QSocketNotifier::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007f01700c705c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007f01700cc516 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f016f7d462b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00007f016f82af45 in socketNotifierSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007f016a9e21a7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f016a9e2400 in g_main_context_iterate.isra () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f016a9e24ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f016f82aa7f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#28 0x00007f016f7d1dea in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#29 0x00007f016f7d9e8c in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#30 0x00007f0172f46d92 in kdemain () from /usr/lib/x86_64-linux-gnu/libkdeinit5_konsole.so
#31 0x00007f0172b76830 in __libc_start_main (main=0x400710 <main>, argc=3, argv=0x7ffe0b7dcf98, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe0b7dcf88) at ../csu/libc-start.c:291
#32 0x0000000000400749 in _start ()

Possible duplicates by query: bug 344183, bug 340075.

Reported using DrKonqi
Comment 1 Kurt Hindenburg 2016-08-27 15:43:31 UTC
Git commit d73270a470680e4b796372a3196d15053d50029b by Kurt Hindenburg.
Committed on 27/08/2016 at 15:41.
Pushed by hindenburg into branch 'master'.

Fix issues where --tabs-from-file doesn't exist or is invalid

Cleanly exit if there are any issues with the given file for
--tabs-from-file option.

M  +19   -15   src/Application.cpp
M  +1    -1    src/Application.h
M  +3    -1    src/main.cpp

http://commits.kde.org/konsole/d73270a470680e4b796372a3196d15053d50029b
Comment 2 Kurt Hindenburg 2016-08-31 12:49:01 UTC
Git commit 133fae6ab106be145f9e91a496dd00de345022b9 by Kurt Hindenburg.
Committed on 31/08/2016 at 12:36.
Pushed by hindenburg into branch 'Applications/16.08'.

Fix issues where --tabs-from-file doesn't exist or is invalid

Cleanly exit if there are any issues with the given file for
--tabs-from-file option.
(cherry picked from commit d73270a470680e4b796372a3196d15053d50029b)

M  +19   -15   src/Application.cpp
M  +1    -1    src/Application.h
M  +3    -1    src/main.cpp

http://commits.kde.org/konsole/133fae6ab106be145f9e91a496dd00de345022b9