Fix issues where --tabs-from-file doesn't exist or is invalid

Cleanly exit if there are any issues with the given file for
--tabs-from-file option.

BUG: 367855
(cherry picked from commit d73270a470680e4b796372a3196d15053d50029b)